--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,6 @@
-[env:native]
-platform = native
-test_framework = unity
-test_build_src = true
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = espidf
+monitor_speed = 115200
+board_build.partitions = partitions_custom.csv
